[CCAP-87] Fixing home page paragraph spacing, and tweaking icons (#454)

--- a/src/main/resources/static/assets/css/custom.css
+++ b/src/main/resources/static/assets/css/custom.css
@@ -193,6 +193,7 @@ img.img-center{
 .paragraph-large {
   font-size: 2.5rem;
   margin-bottom: 25px;
+  line-height: 3.5rem;
 }
 
 p.normal {
